--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,34 @@ h1 {
   color: white;
   background-color: black;
 }
+
+@import-normalize;
+
+body {
+  font-family: sans-serif;
+  line-height: 1.5;
+  padding-left: 100px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
