--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-h1 {
-  color: white;
-  background-color: black;
-}
-
 @import-normalize;
 
 body {
@@ -32,4 +27,8 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+a {
+  text-decoration: none;
 }
